<resources>
    <string name="app_name">Reserva Cancha</string>
    <string name="user_email">User email</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login_logo_description">loginLogo</string>
    <string name="register_logo_description">registerLogo</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_logout">Logout</string>
    <string name="phone_number">(+code) Phone number</string>
    <string name="splash_logo">Splash logo</string>
    <string name="invalid_register">Invalid Register</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="missing_fields">Please fill all fields</string>
    <string name="login_unregistered">User not found in database</string>
    <string name="db_register_fail">Failed to register user data</string>
    <string name="remember_me">Remember me</string>
    <string name="court_image">Court image</string>
    <string name="show_courts">Show Courts</string>
    <string name="court_snapshot_fail">Court does not exist or is null</string>
    <string name="court_snapshot_call_fail">Loading error</string>
    <string name="court_profile_image">Court Profile Image</string>
    <string name="court_dates">Dates:</string>
    <string name="courts_load_fail">Failed to load courts</string>
    <string name="court_status_available">Available</string>
    <string name="court_status_occupied">Occupied</string>
    <string name="court_status_missed">Missed</string>
    <string name="court_schedule_load_failed">Failed to load schedule</string>
    <string name="db_set_reservation_fail">Failed to confirm reserve</string>
    <string name="court_reservation_confirm_message">Are you sure you want to make this reservation?</string>
    <string name="confirmation">Confirmation</string>
    <string name="db_set_reserve_successful">Reserve successful</string>
    <string name="court_show_google_maps">Show court in GoogleMaps</string>
    <string name="court_make_reserve">Reserve</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_logo">Facebook Logo</string>

<!--    Autenticación Facebook-->
    <string name="facebook_app_id">944959689393777</string>
    <string name="fb_login_protocol_scheme">fb944959689393777</string>
    <string name="register_null">User: No information found</string>
    <string name="db_user_load_fail">User: Failed to load user from database</string>

</resources>